examples/test/testpolicy13648.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13648
  namespace: namespace232
spec:
  podSelector:
    matchLabels:
      key33: value20
      key41: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value18
      podSelector:
        matchLabels:
          key16: value18
          key0: value39
          key31: value41
